Fixed Single Property Page

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
+    "photoswipe": "^5.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-photoswipe-gallery": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
